# Password-Manager

./: CMakeLists.txt  main.c  pwdmngr.out
include/: auth.h  file_operations.h  ui.h  user.h
src/: auth.c  file_operations.c  main.c  ui.c
